@@ -543,6 +543,11 @@ class MeetingItemWorkflowActions:
     def doMark_not_applicable(self, stateChange):
         pass
 
+    security.declarePrivate('doRemove')
+
+    def doRemove(self, stateChange):
+        pass
+
     security.declarePrivate('doPostpone_next_meeting')
 
     def doPostpone_next_meeting(self, stateChange):
